deployment/tenant1-e-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-e
  labels:
    app: node-e
  namespace: tenant1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-e
  template:
    metadata:
      labels:
        app: node-e
    spec:
      containers:
      - name: node-e
        image: dhimanhalder/node-e:latest
        ports:
        - containerPort: 8080
