deployment/tenant1-e-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-e
  namespace: tenant1
spec:
  selector:
    app: node-e
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
