deployment/tenant1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: tenant1  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tenant1.plygrnd.entwinemedia.com
    http:
      paths:
      - path: /e
        backend:
          serviceName: node-e
          servicePort: 80
      - path: /v
        backend:
          serviceName: node-v
          servicePort: 80
